--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,11 @@
       <h3>I'm in the appComponent</h3>
       <hr>
       <app-servers></app-servers>
+      <app-success-alert></app-success-alert>
+      <app-warning-alert></app-warning-alert>
       <!-- <div app-servers></div> -->
       <!-- <div class="app-servers"></div> -->
+      <p>aula 30</p>
     </div>
   </div>
 </div>
