--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,13 @@
     <div class="col-xs-12">
       <h3>I'm in the appComponent</h3>
       <hr>
+      <app-user></app-user>
       <app-servers></app-servers>
       <app-success-alert></app-success-alert>
       <app-warning-alert></app-warning-alert>
       <!-- <div app-servers></div> -->
       <!-- <div class="app-servers"></div> -->
-      <p>aula 30</p>
+      <p>aula 40</p>
     </div>
   </div>
 </div>
